tests/suite/fail/generated/types/fail_mod_string_bool.ny
fn main() {
    let _ = "a" % true //~ ERROR type mismatch in `arithmetic` operation
}
